mabger-meter/force-app/main/default/objects/User/fields/AM_Asset_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>AM_Asset_Record_Type__c</fullName>
    <label>Asset Record Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>