mabger-meter/force-app/main/default/objects/User/fields/BigMachines__Allow_Quote_Creation__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Allow_Quote_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, this Salesforce user can create Oracle CPQ Quotes for this Oracle CPQ Site.</inlineHelpText>
    <label>Allow Quote Creation</label>
    <type>Checkbox</type>
</CustomField>