mabger-meter/force-app/main/default/objects/User/fields/BigMachines__Association_to_Organization__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Association_to_Organization__c</fullName>
    <description>This picklist contains the possible associations that users can have to the primary organization.  If you wish to restrict the values that users may select from this list, it is recommended that you create a validation rule.  Modifying this list may break the user integration to Oracle CPQ Cloud.</description>
    <label>Association to Organization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal User</fullName>
                <default>true</default>
                <label>Internal User</label>
            </value>
            <value>
                <fullName>Partner User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>