mabger-meter/force-app/main/default/objects/User/fields/BigMachines__Date_Time_Format__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Date_Time_Format__c</fullName>
    <description>This picklist contains the possible date/time format options that are available to Oracle CPQ Cloud users.  Do not modify this list.</description>
    <label>Date/Time Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MM/dd/yyyy h:mm a</fullName>
                <default>true</default>
                <label>MM/dd/yyyy h:mm a</label>
            </value>
            <value>
                <fullName>MM/dd/yyyy HH:mm</fullName>
            </value>
            <value>
                <fullName>dd/MM/yyyy HH:mm</fullName>
            </value>
            <value>
                <fullName>dd.MM.yyyy HH:mm</fullName>
            </value>
            <value>
                <fullName>yyyy/MM/dd HH:mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>