mabger-meter/force-app/main/default/objects/User/fields/BigMachines__Delegated_Approver__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Delegated_Approver__c</fullName>
    <description>This field allows you to specify a delegated approver in Oracle CPQ Cloud.  The delegated approver feature was introduced in Oracle CPQ Cloud 11.1.  Therefore, this field should be left blank if you are using an earlier version of Oracle CPQ Cloud.</description>
    <inlineHelpText>If you&apos;d like to have a delegated approver in BigMachines, select that user here.  Please note that the user you select must already be provisioned in BigMachines.</inlineHelpText>
    <label>Oracle CPQ Cloud Delegated Approver</label>
    <relationshipName>Approval_Delegator</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>