mabger-meter/force-app/main/default/objects/User/fields/BigMachines__Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Language_Preference__c</fullName>
    <description>This picklist contains the possible language preferences that are available to Oracle CPQ Cloud users.  You will need to manually update this picklist with the possible options that are available in your Oracle CPQ Cloud instance.</description>
    <label>Language Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>