mabger-meter/force-app/main/default/objects/User/fields/BigMachines__Login__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Login__c</fullName>
    <description>This is the value of the Oracle CPQ Cloud user login.  It is derived by looking at the part of the Username field before the &apos;@&apos; symbol and removing all special characters.  If the result is fewer than three characters, underscores &apos;_&apos; are added at the end to make it long enough.</description>
    <formula>IF(LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LEFT(Username, FIND(&quot;@&quot;, Username)-1),&quot;~&quot;, &quot;&quot;),&quot;`&quot;, &quot;&quot;),&quot;!&quot;, &quot;&quot;),&quot;#&quot;, &quot;&quot;),&quot;$&quot;, &quot;&quot;),&quot;%&quot;, &quot;&quot;),&quot;^&quot;, &quot;&quot;),&quot;&amp;&quot;, &quot;&quot;),&quot;*&quot;, &quot;&quot;),&quot;(&quot;, &quot;&quot;),&quot;)&quot;, &quot;&quot;),&quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;),&quot;=&quot;, &quot;&quot;),&quot;{&quot;, &quot;&quot;),&quot;[&quot;, &quot;&quot;),&quot;}&quot;, &quot;&quot;),&quot;]&quot;, &quot;&quot;),&quot;|&quot;, &quot;&quot;),&quot;&apos;&quot;, &quot;&quot;),&quot;.&quot;, &quot;&quot;),&quot;?&quot;, &quot;&quot;),&quot;/&quot;, &quot;&quot;)) &lt; 3,RPAD(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LEFT(Username, FIND(&quot;@&quot;, Username)-1),&quot;~&quot;, &quot;&quot;),&quot;`&quot;, &quot;&quot;),&quot;!&quot;, &quot;&quot;),&quot;#&quot;, &quot;&quot;),&quot;$&quot;, &quot;&quot;),&quot;%&quot;, &quot;&quot;),&quot;^&quot;, &quot;&quot;),&quot;&amp;&quot;, &quot;&quot;),&quot;*&quot;, &quot;&quot;),&quot;(&quot;, &quot;&quot;),&quot;)&quot;, &quot;&quot;),&quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;),&quot;=&quot;, &quot;&quot;),&quot;{&quot;, &quot;&quot;),&quot;[&quot;, &quot;&quot;),&quot;}&quot;, &quot;&quot;),&quot;]&quot;, &quot;&quot;),&quot;|&quot;, &quot;&quot;),&quot;&apos;&quot;, &quot;&quot;),&quot;.&quot;, &quot;&quot;),&quot;?&quot;, &quot;&quot;),&quot;/&quot;, &quot;&quot;),3, &quot;_&quot;),SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LEFT(Username, FIND(&quot;@&quot;, Username)-1),&quot;~&quot;, &quot;&quot;),&quot;`&quot;, &quot;&quot;),&quot;!&quot;, &quot;&quot;),&quot;#&quot;, &quot;&quot;),&quot;$&quot;, &quot;&quot;),&quot;%&quot;, &quot;&quot;),&quot;^&quot;, &quot;&quot;),&quot;&amp;&quot;, &quot;&quot;),&quot;*&quot;, &quot;&quot;),&quot;(&quot;, &quot;&quot;),&quot;)&quot;, &quot;&quot;),&quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;),&quot;=&quot;, &quot;&quot;),&quot;{&quot;, &quot;&quot;),&quot;[&quot;, &quot;&quot;),&quot;}&quot;, &quot;&quot;),&quot;]&quot;, &quot;&quot;),&quot;|&quot;, &quot;&quot;),&quot;&apos;&quot;, &quot;&quot;),&quot;.&quot;, &quot;&quot;),&quot;?&quot;, &quot;&quot;),&quot;/&quot;, &quot;&quot;))</formula>
    <label>Oracle CPQ Cloud Login</label>
    <type>Text</type>
</CustomField>