mabger-meter/force-app/main/default/objects/User/fields/BigMachines__Partner_Organization__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Partner_Organization__c</fullName>
    <description>This field contains the variable name of the partner organization to which this partner user is associated in Oracle CPQ Cloud.</description>
    <formula>IF( (Text(BigMachines__Association_to_Organization__c) == &apos;Partner User&apos;) , Contact.Account.BigMachines__Partner_Organization__c, &apos;&apos;)</formula>
    <label>Partner Organization</label>
    <type>Text</type>
</CustomField>