mabger-meter/force-app/main/default/objects/User/fields/BigMachines__Provisioned__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Provisioned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates that there is a Oracle CPQ Cloud user that has been linked to this Salesforce user.</description>
    <inlineHelpText>Check this box to establish a link between this Salesforce user and BigMachines.  Linked users will not be prompted to enter login credentials when accessing BigMachines to create and edit quotes.</inlineHelpText>
    <label>Synchronize with Oracle CPQ Cloud</label>
    <type>Checkbox</type>
</CustomField>