mabger-meter/force-app/main/default/objects/User/fields/BigMachines__Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Time_Zone__c</fullName>
    <description>This picklist contains the possible time zones that are available to Oracle CPQ Cloud users.  Do not modify this list.</description>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(GMT-11:00 GMT-11:00) Samoa</fullName>
            </value>
            <value>
                <fullName>(GMT-10:00 GMT-10:00) Hawaii</fullName>
            </value>
            <value>
                <fullName>(GMT-10:00 GMT-9:00) Aleutian</fullName>
            </value>
            <value>
                <fullName>(GMT-9:30 GMT-9:30) Marquesas</fullName>
            </value>
            <value>
                <fullName>(GMT-9:00 GMT-9:00) Gambier</fullName>
            </value>
            <value>
                <fullName>(GMT-9:00 GMT-8:00) Alaska</fullName>
            </value>
            <value>
                <fullName>(GMT-8:00 GMT-8:00) Pitcairn</fullName>
            </value>
            <value>
                <fullName>(GMT-8:00 GMT-7:00) US Pacific Time</fullName>
            </value>
            <value>
                <fullName>(GMT-7:00 GMT-7:00) Arizona</fullName>
            </value>
            <value>
                <fullName>(GMT-7:00 GMT-6:00) Mountain</fullName>
            </value>
            <value>
                <fullName>(GMT-6:00 GMT-6:00) Saskatchewan</fullName>
            </value>
            <value>
                <fullName>(GMT-6:00 GMT-5:00) US Central Time</fullName>
            </value>
            <value>
                <fullName>(GMT-5:00 GMT-5:00) Indianapolis</fullName>
            </value>
            <value>
                <fullName>(GMT-5:00 GMT-4:00) US Eastern Time</fullName>
                <default>true</default>
                <label>(GMT-5:00 GMT-4:00) US Eastern Time</label>
            </value>
            <value>
                <fullName>(GMT-4:00 GMT-4:00) Puerto Rico</fullName>
            </value>
            <value>
                <fullName>(GMT-3:00 GMT-4:00) Chile</fullName>
            </value>
            <value>
                <fullName>(GMT-4:00 GMT-3:00) Canada Atlantic Time</fullName>
            </value>
            <value>
                <fullName>(GMT-3:00 GMT-3:00) Buenos Aires</fullName>
            </value>
            <value>
                <fullName>(GMT-3:30 GMT-2:30) Newfoundland</fullName>
            </value>
            <value>
                <fullName>(GMT-2:00 GMT-3:00) Sao Paulo</fullName>
            </value>
            <value>
                <fullName>(GMT-2:00 GMT-2:00) Brazil/DeNoronha</fullName>
            </value>
            <value>
                <fullName>(GMT-1:00 GMT-1:00) Cape Verde</fullName>
            </value>
            <value>
                <fullName>(GMT-1:00 GMT+0:00) Azores</fullName>
            </value>
            <value>
                <fullName>(GMT+0:00 GMT+0:00) GMT</fullName>
            </value>
            <value>
                <fullName>(GMT+0:00 GMT+1:00) London</fullName>
            </value>
            <value>
                <fullName>(GMT+1:00 GMT+1:00) Algiers</fullName>
            </value>
            <value>
                <fullName>(GMT+2:00 GMT+1:00) Windhoek</fullName>
            </value>
            <value>
                <fullName>(GMT+1:00 GMT+2:00) Amsterdam</fullName>
            </value>
            <value>
                <fullName>(GMT+2:00 GMT+2:00) Tripoli</fullName>
            </value>
            <value>
                <fullName>(GMT+2:00 GMT+3:00) Israel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>