mabger-meter/force-app/main/default/objects/User/fields/BigMachines__User_Groups__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__User_Groups__c</fullName>
    <description>This picklist contains the possible user groups to which Oracle CPQ Cloud users may belong.  You will need to manually update this picklist with the possible options that are available in your Oracle CPQ Cloud instance.  The values in this list should be the variable name, not the display name, of the Oracle CPQ Cloud user groups.</description>
    <label>User Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>