mabger-meter/force-app/main/default/objects/User/fields/Community_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Community_Business_Unit__c</fullName>
    <formula>Contact.Business_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Business Unit</label>
    <type>Text</type>
</CustomField>