mabger-meter/force-app/main/default/objects/User/fields/Community_Deactivation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Community_Deactivation_Reason__c</fullName>
    <formula>TEXT(Contact.Partner_User_Deactivation_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Deactivation Reason</label>
    <type>Text</type>
</CustomField>