mabger-meter/force-app/main/default/objects/User/fields/Contact_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://badgermeter.lightning.force.com/lightning/r/Contact/&quot;+Contact.Id+&quot;/view&quot;, Contact.FirstName+&quot; &quot;+Contact.LastName+&quot;&apos;s Contact Record&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Record Link</label>
    <type>Text</type>
</CustomField>