mabger-meter/force-app/main/default/objects/User/fields/Deactivate_User__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate User</label>
    <type>Checkbox</type>
</CustomField>