mabger-meter/force-app/main/default/objects/User/fields/DM_U_External_ID__c.field-meta.xml
<CustomField>
    <fullName>DM_U_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>DM U External ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>