mabger-meter/force-app/main/default/objects/User/fields/External_Pivotal_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Pivotal_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Pivotal ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>