mabger-meter/force-app/main/default/objects/User/fields/Manager_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Full_Name__c</fullName>
    <formula>Manager.FirstName + &quot; &quot; +  Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Full Name</label>
    <type>Text</type>
</CustomField>