mabger-meter/force-app/main/default/objects/User/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Racine</fullName>
            </value>
            <value>
                <fullName>Milwaukee</fullName>
            </value>
            <value>
                <fullName>Tulsa</fullName>
            </value>
            <value>
                <fullName>Collegeville</fullName>
            </value>
            <value>
                <fullName>Delph</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>