mabger-meter/force-app/main/default/objects/User/fields/Sales_Credit_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Credit_Number_1__c</fullName>
    <externalId>true</externalId>
    <label>Sales Credit Number 1</label>
    <length>6</length>
    <type>Text</type>
</CustomField>