mabger-meter/force-app/main/default/objects/User/fields/Total_Partner_Community_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Partner_Community_Licenses__c</fullName>
    <formula>$CustomMetadata.License_Quantity__mdt.Partner_Community.Total_Licenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Partner Community Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>