mabger-meter/force-app/main/default/objects/User/fields/Widen_DAM_Role__c.field-meta.xml
<CustomField>
    <fullName>Widen_DAM_Role__c</fullName>
    <defaultValue>&quot;BM Employee Role&quot;</defaultValue>
    <description>For internal employees who use the Widen DAM (&quot;The Vault&quot;), this indicates what role(s) they have in that system. Ignored for external employees.</description>
    <inlineHelpText>For internal employees who use the Widen DAM (&quot;The Vault&quot;), this indicates what role(s) they have in that system. Ignored for external employees.</inlineHelpText>
    <label>Widen DAM Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BM Employee Role</fullName>
                <default>true</default>
                <label>BM Employee Role</label>
            </value>
            <value>
                <fullName>BM CAD/BIM Upload Role</fullName>
            </value>
            <value>
                <fullName>BM Certification Upload Role</fullName>
            </value>
            <value>
                <fullName>BM Marketing Services Role</fullName>
            </value>
            <value>
                <fullName>BM Product Support Upload Role</fullName>
            </value>
            <value>
                <fullName>BM Sales &amp; Marketing Upload Role</fullName>
            </value>
            <value>
                <fullName>BM Software Upload Role</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>