mabger-meter/force-app/main/default/objects/User/validationRules/BigMachines__BigMachines_Association_to_Organization.validationRule-meta.xml
<ValidationRule>
    <fullName>BigMachines__BigMachines_Association_to_Organization</fullName>
    <active>true</active>
    <description>Changing the Association to Organization will break the link this user has to Oracle CPQ Cloud. While it will be possible to provision the user once this value has changed, the new user will no longer be the owner of any previously created quotes.</description>
    <errorConditionFormula>AND(BigMachines__Provisioned__c, ISCHANGED(BigMachines__Association_to_Organization__c), NOT(ISBLANK(PRIORVALUE(BigMachines__Association_to_Organization__c))))</errorConditionFormula>
    <errorMessage>It is highly recommended that you consult a Oracle CPQ Cloud administrator before changing the value of Association to Organization for this linked user. To change the association, you must first deselect the checkbox &quot;Provisioned in Oracle CPQ Cloud&quot;.</errorMessage>
</ValidationRule>